--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -3890,6 +3890,9 @@ Higher scores indicate more severe mental health symptoms.*
 The missing data rule was applied. Calculations were completed for
 participants with 33% or less missing data (this includes -77 responses)
 
+## edit this this is the number matching with original scale 
+01 = 01, 02 = 03, 03 = 04, 04 = 05, 05 = 06, 06 = 07, 07 = 08, 08 = 09, 09 = 10, 10 = 11, 11 = 12, 12 = 13, 13 = N/A, 14 = 14, 15 = 15, 16 = 16, 17 = 17, 18 = 19, 19 = 20, 20 = 22, 21 = 24, 22 = 25, 23 = N/A, 24 = 26, 25 = 27, 26 = 28, 27 = 29, 28 = 30, 29 = 32, 30 = 34, 31 = 35, 32 = 37, 33 = 38, 34 = 40, 35 = 41, 36 = 42, 37 = 43, 38 = 44, 39 = 45
+
 Reference:
 [@feiring2005persistence](https://journals.sagepub.com/doi/abs/10.1177/1077559505276686);
 [DOI](https://doi.org/10.1177/1077559505276686)
